fix layers order with z-index property  (mobile devices)
The drop-down menu was overlapped by the main element content.

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,6 @@ main {
     width: 500px;
     background: url(../images/Shape-background.png) no-repeat  -100px top/cover;
     transition: background 0.5s;
-    z-index: -2;
 }
 
 .content {
@@ -185,11 +184,13 @@ main {
         padding: 0;
         display: block;
         width: 100%;
+        z-index: 999;
     }
 
     .design-left {
         display: none;
     }
+
     nav {
         margin-top: 20px;
         background-color: teal;
@@ -197,8 +198,12 @@ main {
         height: 0px;
         overflow: hidden;
         transition: height 0.5s;
+        z-index: 999;
     }
 
+    main {
+        z-index: 998;
+    }
     nav ul{
         display: block;
     }
